<resources>
    <string name="app_name">SimpleBluetooth</string>
    <string name="read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="status">Status:</string>
    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="rx">RX:</string>
    <string name="toggle_led">Toggle LED</string>
</resources>
