<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/rx"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/read_buffer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetoothStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/bluetooth_status" />
        </LinearLayout>

        <Button
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_on" />

        <Button
            android:id="@+id/off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_off" />

        <Button
            android:id="@+id/PairedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices" />

        <Button
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices" />

        <ListView
            android:id="@+id/devicesListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

    </LinearLayout>

</RelativeLayout>